5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1667_2969.log
== TEST (2019-04-16 16:25:37) 
-- CODE:
qtdjogo=int(input("digite a quantidade: "))
preco=float(input("digite o valor do jogo: "))
precosegundo=float(input("digite o valor: "))
segundojogo=int(input("digite o segundo jogo"))
if qtdjogo<=2:
   total=(qtdjogo*preco)
	else
	total=(segundojogo*precosegundo)
	print(total)
	
-- ERROR:
File "XXXX", line 7
    else
       ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:50) 
-- CODE:
qtdjogo=int(input("digite a quantidade: "))
preco=float(input("digite o valor do jogo: "))
precosegundo=float(input("digite o valor: "))
segundojogo=int(input("digite o segundo jogo"))
if qtdjogo<=2:
   total=(qtdjogo*preco)
else
	total=(segundojogo*precosegundo)
	print(total)
	
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:02) 
-- CODE:
qtdjogo=int(input("digite a quantidade: "))
preco=float(input("digite o valor do jogo: "))
precosegundo=float(input("digite o valor: "))
segundojogo=int(input("digite o segundo jogo"))
if= qtdjogo<=2:
   total=(qtdjogo*preco)
else
	total=(segundojogo*precosegundo)
	print(total)
	
-- ERROR:
File "XXXX", line 5
    if= qtdjogo<=2:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:19) 
-- CODE:
qtdjogo=int(input("digite a quantidade: "))
preco=float(input("digite o valor do jogo: "))
precosegundo=float(input("digite o valor: "))
segundojogo=int(input("digite o segundo jogo"))
if
qtdjogo<=2:
   total=(qtdjogo*preco)
else
	total=(segundojogo*precosegundo)
	print(total)
	
-- ERROR:
File "XXXX", line 5
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:28) 
-- CODE:
qtdjogo=int(input("digite a quantidade: "))
preco=float(input("digite o valor do jogo: "))
precosegundo=float(input("digite o valor: "))
segundojogo=int(input("digite o segundo jogo"))
if qtdjogo<=2:
   total=(qtdjogo*preco)
else
	total=(segundojogo*precosegundo)
	print(total)
	
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:35) 
-- CODE:
qtdjogo=int(input("digite a quantidade: "))
preco=float(input("digite o valor do jogo: "))
precosegundo=float(input("digite o valor: "))
segundojogo=int(input("digite o segundo jogo"))
if (qtdjogo<=2):
   total=(qtdjogo*preco)
else
	total=(segundojogo*precosegundo)
	print(total)
	
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
